--- a/bfh-client/src/index.css
+++ b/bfh-client/src/index.css
@@ -1,3 +1,76 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* #A {
+height: px;
+opacity: 0;
+border: 1px solid black;
+transition: opacity .3s;
+} */
+
+/* #A {
+    height:0%;
+    fill-opacity: auto;
+    border: 1px;
+    transition: opacity .3s;
+} */
+
+#hidden{
+    display: none;
+}
+
+.signUpBackground{
+    width: 100vw;
+    height: 100vh;
+   align-items: center;
+    justify-content: center;
+    display: flex;
+    position:fixed;
+    top: 0;
+    left: 0;
+}
+
+.signUpContainer{
+    width: 60%;
+    height: 40%;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: rgba(0, 0, 0, 0.514) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* .signUpCloseBtn{
+    font-size:larger;
+    display: flex;
+    justify-content: flex-end;
+    align-items: self-end;
+    top:0px;
+    right:0px;
+} */
+
+.signUpInput{
+    text-align: center;
+    font-size: 20px;
+    height: 30px;
+    width: 250px;
+    margin: 15px;
+    outline: none;
+    border: none;
+    margin-bottom: 5%;
+    justify-items: center;
+}
+
+.signup-btn{
+    width: 110px;
+    height: 36px;
+    margin: 10px;
+    border: none;
+    background-color:rgb(3, 3, 3);
+    color: white;
+    border-radius: 25px;
+    font-size: 20px;
+    cursor: pointer;
+}
